--- a/DWSIM.Plugins.NaturalGas/DWSIM.Plugins.NaturalGas.vbproj
+++ b/DWSIM.Plugins.NaturalGas/DWSIM.Plugins.NaturalGas.vbproj
@@ -274,43 +274,8 @@
     <Error Condition="!Exists('..\packages\SkiaSharp.1.68.2.1\build\net45\SkiaSharp.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\SkiaSharp.1.68.2.1\build\net45\SkiaSharp.targets'))" />
   </Target>
   <PropertyGroup>
-    <PostBuildEvent>if "$(ConfigurationName)"=="Release" (
-
-erase /s /q "$(SolutionDir)DistPackages\Windows\plugins\*Skia*.*" 2&gt;nul 1&gt;nul 4&gt;nul
-erase /s /q "$(SolutionDir)DistPackages\Windows\plugins\*Eto*.*" 2&gt;nul 1&gt;nul 4&gt;nul
-rd /s /q "$(SolutionDir)DistPackages\Windows\plugins\x86" 2&gt;nul 1&gt;nul 4&gt;nul
-rd /s /q "$(SolutionDir)DistPackages\Windows\plugins\x64" 2&gt;nul 1&gt;nul 4&gt;nul
-
-erase /s /q "$(SolutionDir)DistPackages\Windows_32\plugins\*Skia*.*" 2&gt;nul 1&gt;nul 4&gt;nul
-erase /s /q "$(SolutionDir)DistPackages\Windows_32\plugins\*Eto*.*" 2&gt;nul 1&gt;nul 4&gt;nul
-rd /s /q "$(SolutionDir)DistPackages\Windows_32\plugins\x86" 2&gt;nul 1&gt;nul 4&gt;nul
-rd /s /q "$(SolutionDir)DistPackages\Windows_32\plugins\x64" 2&gt;nul 1&gt;nul 4&gt;nul
-
-erase /s /q "$(SolutionDir)DistPackages\macOS\plugins\*Skia*.*" 2&gt;nul 1&gt;nul 4&gt;nul
-erase /s /q "$(SolutionDir)DistPackages\macOS\plugins\*Eto*.*" 2&gt;nul 1&gt;nul 4&gt;nul
-rd /s /q "$(SolutionDir)DistPackages\macOS\plugins\x86" 2&gt;nul 1&gt;nul 4&gt;nul
-rd /s /q "$(SolutionDir)DistPackages\macOS\plugins\x64" 2&gt;nul 1&gt;nul 4&gt;nul
-
-erase /s /q "$(SolutionDir)DistPackages\Linux\plugins\*Skia*.*" 2&gt;nul 1&gt;nul 4&gt;nul
-erase /s /q "$(SolutionDir)DistPackages\Linux\plugins\*Eto*.*" 2&gt;nul 1&gt;nul 4&gt;nul
-rd /s /q "$(SolutionDir)DistPackages\Linux\plugins\x86" 2&gt;nul 1&gt;nul 4&gt;nul
-rd /s /q "$(SolutionDir)DistPackages\Linux\plugins\x64" 2&gt;nul 1&gt;nul 4&gt;nul
-
-erase /s /q "$(SolutionDir)DistPackages\Windows\plugins\*.dylib" 2&gt;nul 1&gt;nul 4&gt;nul
-rd /s /q "$(SolutionDir)DistPackages\Windows\x86" 2&gt;nul 1&gt;nul 4&gt;nul
-rd /s /q "$(SolutionDir)DistPackages\Windows\x64" 2&gt;nul 1&gt;nul 4&gt;nul
-
-erase /s /q "$(SolutionDir)DistPackages\Windows_32\plugins\*.dylib" 2&gt;nul 1&gt;nul 4&gt;nul
-rd /s /q "$(SolutionDir)DistPackages\Windows_32\x86" 2&gt;nul 1&gt;nul 4&gt;nul
-rd /s /q "$(SolutionDir)DistPackages\Windows_32\x64" 2&gt;nul 1&gt;nul 4&gt;nul
-
-rd /s /q "$(SolutionDir)DistPackages\macOS\x86" 2&gt;nul 1&gt;nul 4&gt;nul
-rd /s /q "$(SolutionDir)DistPackages\macOS\x64" 2&gt;nul 1&gt;nul 4&gt;nul
-
-erase /s /q "$(SolutionDir)DistPackages\Linux\plugins\*.dylib" 2&gt;nul 1&gt;nul 4&gt;nul
-rd /s /q "$(SolutionDir)DistPackages\Linux\x86" 2&gt;nul 1&gt;nul 4&gt;nul
-rd /s /q "$(SolutionDir)DistPackages\Linux\x64" 2&gt;nul 1&gt;nul 4&gt;nul
-)</PostBuildEvent>
+    <PostBuildEvent>tree "$(SolutionDir)DistPackages"
+</PostBuildEvent>
   </PropertyGroup>
   <Import Project="..\packages\SkiaSharp.1.68.2.1\build\net45\SkiaSharp.targets" Condition="Exists('..\packages\SkiaSharp.1.68.2.1\build\net45\SkiaSharp.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
