--- a/DWSIM.Apps.TCPServer/DWSIM.Apps.TCPServer.vbproj
+++ b/DWSIM.Apps.TCPServer/DWSIM.Apps.TCPServer.vbproj
@@ -193,7 +193,7 @@ erase /S /Q "$(SolutionDir)DistPackages\Linux\plugins\*Skia*" 2&gt;nul 1&gt;nul 
 erase /S /Q "$(SolutionDir)DistPackages\Linux\plugins\*Eto*" 2&gt;nul 1&gt;nul 4&gt;nul
 rd /s /q "$(SolutionDir)DistPackages\Linux\plugins\x86"
 rd /s /q "$(SolutionDir)DistPackages\Linux\plugins\x64"
-)</PostBuildEvent>
+) || echo "PostBuildEvent failed"</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
